Abrir ventana si login es correcto

--- a/login.ui
+++ b/login.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>303</width>
-    <height>391</height>
+    <height>438</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,10 @@
       <enum>QFrame::Plain</enum>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
+     </property>
+     <property name="tabSpacing">
+      <number>0</number>
      </property>
      <widget class="QWidget" name="pageLogIn">
       <property name="geometry">
@@ -31,7 +34,7 @@
         <x>0</x>
         <y>0</y>
         <width>285</width>
-        <height>305</height>
+        <height>364</height>
        </rect>
       </property>
       <attribute name="label">
@@ -81,7 +84,7 @@
         <x>0</x>
         <y>0</y>
         <width>285</width>
-        <height>305</height>
+        <height>364</height>
        </rect>
       </property>
       <attribute name="label">
