--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,20 +17,50 @@
    <widget class="QTableWidget" name="tblDocumentos">
     <property name="geometry">
      <rect>
-      <x>55</x>
-      <y>120</y>
-      <width>461</width>
-      <height>192</height>
+      <x>20</x>
+      <y>100</y>
+      <width>661</width>
+      <height>361</height>
      </rect>
     </property>
+    <property name="showGrid">
+     <bool>true</bool>
+    </property>
+    <property name="gridStyle">
+     <enum>Qt::SolidLine</enum>
+    </property>
+    <attribute name="horizontalHeaderVisible">
+     <bool>true</bool>
+    </attribute>
+    <attribute name="horizontalHeaderCascadingSectionResizes">
+     <bool>false</bool>
+    </attribute>
+    <attribute name="horizontalHeaderDefaultSectionSize">
+     <number>219</number>
+    </attribute>
+    <column>
+     <property name="text">
+      <string>Nombre</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Tipo</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Permiso</string>
+     </property>
+    </column>
    </widget>
    <widget class="QFrame" name="frmLogin">
     <property name="geometry">
      <rect>
-      <x>410</x>
+      <x>520</x>
       <y>10</y>
-      <width>131</width>
-      <height>81</height>
+      <width>160</width>
+      <height>71</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -39,27 +69,23 @@
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
-    <widget class="QPushButton" name="btnLogin">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>10</y>
-       <width>98</width>
-       <height>28</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>LogIn</string>
-     </property>
-    </widget>
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="0" column="0">
+      <widget class="QPushButton" name="btnLogin">
+       <property name="text">
+        <string>LogIn</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
    <widget class="QFrame" name="frmLogout">
     <property name="geometry">
      <rect>
-      <x>550</x>
+      <x>520</x>
       <y>10</y>
-      <width>131</width>
-      <height>80</height>
+      <width>161</width>
+      <height>71</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -68,38 +94,28 @@
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
-    <widget class="QLabel" name="lblUsuario">
-     <property name="geometry">
-      <rect>
-       <x>30</x>
-       <y>10</y>
-       <width>81</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>TextLabel</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="btnLogout">
-     <property name="geometry">
-      <rect>
-       <x>20</x>
-       <y>40</y>
-       <width>98</width>
-       <height>28</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>LogOut</string>
-     </property>
-    </widget>
+    <layout class="QGridLayout" name="gridLayout_2">
+     <item row="0" column="0">
+      <widget class="QLabel" name="lblUsuario">
+       <property name="text">
+        <string>TextLabel</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QPushButton" name="btnLogout">
+       <property name="text">
+        <string>LogOut</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
    <widget class="QPushButton" name="btnNuevo">
     <property name="geometry">
      <rect>
-      <x>560</x>
-      <y>360</y>
+      <x>580</x>
+      <y>490</y>
       <width>98</width>
       <height>28</height>
      </rect>
@@ -111,8 +127,8 @@
    <widget class="QPushButton" name="btnVer">
     <property name="geometry">
      <rect>
-      <x>450</x>
-      <y>360</y>
+      <x>470</x>
+      <y>490</y>
       <width>98</width>
       <height>28</height>
      </rect>
@@ -124,8 +140,8 @@
    <widget class="QPushButton" name="btnEliminar">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>360</y>
+      <x>360</x>
+      <y>490</y>
       <width>98</width>
       <height>28</height>
      </rect>
@@ -137,8 +153,8 @@
    <widget class="QPushButton" name="btnActualizar">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>360</y>
+      <x>250</x>
+      <y>490</y>
       <width>98</width>
       <height>28</height>
      </rect>
@@ -150,8 +166,8 @@
    <widget class="QFrame" name="frmNuevo">
     <property name="geometry">
      <rect>
-      <x>540</x>
-      <y>219</y>
+      <x>560</x>
+      <y>349</y>
       <width>131</width>
       <height>131</height>
      </rect>
