Arreglo de consumidor para ventana actual. Recepcion de archivo leido del servidor. Cargar arbol de archivo recibido y graficarlo

--- a/dialogdocument.ui
+++ b/dialogdocument.ui
@@ -117,16 +117,6 @@
     <string>Guardar</string>
    </property>
   </widget>
-  <widget class="QTreeView" name="treeView">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>211</width>
-     <height>321</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QLabel" name="lblSeleccion">
    <property name="geometry">
     <rect>
@@ -185,7 +175,7 @@
     <string>Imagen</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>240</x>
@@ -207,7 +197,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>240</x>
@@ -229,7 +219,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>240</x>
@@ -261,6 +251,21 @@
      </layout>
     </item>
    </layout>
+  </widget>
+  <widget class="QTreeWidget" name="treeWidget">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>10</y>
+     <width>211</width>
+     <height>321</height>
+    </rect>
+   </property>
+   <column>
+    <property name="text">
+     <string notr="true">1</string>
+    </property>
+   </column>
   </widget>
  </widget>
  <resources/>
