--- a/dialoglienzo.ui
+++ b/dialoglienzo.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
@@ -45,6 +45,19 @@
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QPushButton" name="btnGenerarPNG">
+   <property name="geometry">
+    <rect>
+     <x>507</x>
+     <y>50</y>
+     <width>111</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Generar PNG</string>
+   </property>
   </widget>
  </widget>
  <resources/>
