--- a/dialoglienzo.ui
+++ b/dialoglienzo.ui
@@ -46,19 +46,6 @@
     </item>
    </layout>
   </widget>
-  <widget class="QLabel" name="lblImagen">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>180</y>
-     <width>601</width>
-     <height>271</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
@@ -156,6 +143,22 @@
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QFrame" name="frmLienzo">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>170</y>
+     <width>611</width>
+     <height>301</height>
+    </rect>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::StyledPanel</enum>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
   </widget>
  </widget>
  <resources/>
