--- a/dialogdocument.ui
+++ b/dialogdocument.ui
@@ -23,7 +23,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Guardar</string>
+    <string>Guardar DOC</string>
    </property>
   </widget>
   <widget class="QPushButton" name="btnCancelar">
@@ -107,14 +107,14 @@
   <widget class="QPushButton" name="btnGuardarNodo">
    <property name="geometry">
     <rect>
-     <x>510</x>
+     <x>500</x>
      <y>420</y>
-     <width>98</width>
+     <width>120</width>
      <height>28</height>
     </rect>
    </property>
    <property name="text">
-    <string>Guardar</string>
+    <string>Guardar Nodo</string>
    </property>
   </widget>
   <widget class="QLabel" name="lblSeleccion">
